--- a/RollDiceApplication/app/build.gradle
+++ b/RollDiceApplication/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.myapplication"
+        applicationId "com.example.RollDiceApplication"
         minSdk 33
         targetSdk 33
         versionCode 1
@@ -29,7 +29,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    namespace 'com.example.myapplication'
+    namespace 'com.example.RollDiceApplication'
 }
 
 dependencies {
