--- a/SeoulTour/app/src/main/AndroidManifest.xml
+++ b/SeoulTour/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <activity android:name=".PlaceActivity"></activity>
     </application>
 
 </manifest>
