add move activity

--- a/CultureApp/app/src/main/AndroidManifest.xml
+++ b/CultureApp/app/src/main/AndroidManifest.xml
@@ -12,6 +12,27 @@
         android:theme="@style/Theme.CultureApp"
         tools:targetApi="31">
         <activity
+            android:name=".PerformanceActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".BookActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".MovieActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
